hphp/hack/test/pocket_universes/typing/proj_class.bad.php.exp
File "proj_class.bad.php", line 10, characters 12-15:
Unbound name: this (an object type) (Naming[2049])
